BUGFIX: Core | Torrents leave READY state quicker after other torrents are re-queued [TuxPaper]
BUGFIX: Core | Fix for Fast Resume not working when a 0-byte file exists in the torrent [Nolar]
BUGIFX: Core | Fix for Fast Resume not working when Incremental File Creation is enabled [Nolar]
BUGFIX: UI   | # Column now on by default again [TuxPaper]
BUGFIX: UI   | Fix for Bug #966867: Context Menu not appearing after setting up columns on Linux [TuxPaper]
BUGFIX: UI   | IP column now sorts by hex groups [TuxPaper]
BUGFIX: UI   | Fix for .torrent icons with new Azureus.exe [Parg]
BUGFIX: UI   | Fix for text color on some Table cells not moving when row moved [TuxPaper]
BUGFIX: UI   | Moving torrent from Uncategorized category to new category now removes the row from the display [TuxPaper]
BUGFIX: UI   | Fix for empty table rows appearing in Peers Details tab and Pieces tab [TuxPaper]
BUGFIX: UI   | Windows : Tray Icon should come back after explorer crash (needs latest SWT build) [SWT team, Gudy]
BUGFIX: UI   | 192 bytes memory leak fixed on OSX [SWT Team, Gudy]



30.05.04 | Azureus 2.1.0.0

FEATURE: Core | Ability to limit global download speed [Parg]
FEATURE: Core | Added ability to automatically exclude files when making torrents (e.g. .DS_Store & Thumbs.db) [Parg]
FEATURE: Core | Caching of peer info to disk for quick restarts if tracker is unavailable [Parg]
FEATURE: Core | Detection of plugin updates [Parg]
FEATURE: Core | HTTP scrapes to same tracker combined into one request if tracker supports it [TuxPaper]
FEATURE: Core | Support for scraping trackers like http://tracker.boxtorrents.com:6969/ that scrape with /scrape but don't have "announce" in announce URL [Parg]
FEATURE: Core | Tracker connections proxy support (peer connections not supported yet) [Nolar]
FEATURE: Core | UDP authentication protocol added [Parg]
FEATURE: Core | UDP tracker version 2 support added [Parg]
FEATURE: Core | Generic update mechanisms for core, updater and swt [Parg/Gudy]